--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,1 +1,5 @@
+<ng-include src="'views/accueil.html'"></ng-include>
+
+<ng-include src="'views/form.html'"></ng-include>
+
 <ng-include src="'views/photo.html'"></ng-include>
