--- a/public/views/photo.html
+++ b/public/views/photo.html
@@ -1,16 +1,22 @@
-<div class="row">
-  <form class="col s12" action="/api/picture" enctype="multipart/form-data" method="post">
-      <div class="file-field input-field">
-          <div class="btn black">
-              <span>Parcourir..</span>
-              <input file-upload type="file" placeholder="Image" id="uploadImage" name='file'>
-          </div>
-          <div class="file-path-wrapper">
-              <input class="file-path validate" type="text">
-          </div>
-      </div>
-      <input id="titrePhoto" placeholder="Veuillez saisir un pseudo" type="text" ng-model='photo.pseudoPhoto'>
-      <input id="descPhoto" placeholder="Veuillez saisir un nom de ville" type="text" ng-model='photo.lieuPhoto'>
-  </form>
-  <button ng-click='vm.create(photo)' onclick="Materialize.toast('Votre moustache est envoyée!', 4000)" class="btn waves-effect waves-light blue">Envoyer</button>
+<header>
+    <h1>Barre espace pour prendre une photo</h1>
+    <p>flèche gauche pour en reprendre une, ou flèche droite pour uploader la photo</p>
+</header>
+<div id="videocontainer">
+    <video id="video"></video>
+</div>
+<canvas id="canvas"></canvas>
+<div id="controls">
+    <button id="resetbutton">&lt; reprendre une photo&hellip;</button>
+    <button id="uploadbutton">uploader cette photo &gt;</button>
+</div>
+<div id="cover"></div>
+<div id="uploading">Uploading&hellip;</div>
+<div id="uploaded">
+    <form id="imgurform">
+        Uploaded:
+        <input type="text" id="url">
+        <a href="#">link</a>
+    </form>
+    <button id="startbutton">&lt;prendre une autre photo</button>
 </div>
