--- a/public/views/form.html
+++ b/public/views/form.html
@@ -1,17 +1,17 @@
 <div class="row">
-  <form class="col s12" action="/api/picture" enctype="multipart/form-data" method="post">
-      <div class="file-field input-field">
-          <div class="btn black">
-              <span>Parcourir..</span>
-              <input file-upload type="file" placeholder="Image" id="uploadImage" name='file'>
-          </div>
-          <div class="file-path-wrapper">
-              <input class="file-path validate" type="text">
-          </div>
-      </div>
-      <input id="commentPhoto" placeholder="Veuillez saisir un pseudo" type="text" ng-model='photo.commentPhoto'>
-      <input id="titrePhoto" placeholder="Veuillez saisir un pseudo" type="text" ng-model='photo.pseudoPhoto'>
-      <input id="lieuPhoto" placeholder="Veuillez saisir un nom de ville" type="text" ng-model='photo.lieuPhoto'>
-  </form>
-  <button ng-click='vm.create(photo)' onclick="Materialize.toast('Toutes les moustaches, les M.O.S partent dans les airs!', 4000)" class="btn waves-effect waves-light blue">Envoyer</button>
+    <form class="col s12" action="/api/picture" enctype="multipart/form-data" method="post">
+        <div class="file-field input-field">
+            <div class="btn black">
+                <span>Parcourir..</span>
+                <input file-upload type="file" placeholder="Image" id="uploadImage" name='file'>
+            </div>
+            <div class="file-path-wrapper">
+                <input class="file-path validate" type="text">
+            </div>
+        </div>
+        <input id="commentPhoto" placeholder="Veuillez saisir un commentaire" type="text" ng-model='photo.commentPhoto'>
+        <input id="titrePhoto" placeholder="Veuillez saisir un pseudo" type="text" ng-model='photo.pseudoPhoto'>
+        <input id="lieuPhoto" placeholder="Veuillez saisir un nom de ville" type="text" ng-model='photo.lieuPhoto'>
+    </form>
+    <button ng-click='vm.create(photo)' onclick="Materialize.toast('Toutes les moustaches, les M.O.S partent dans les airs!', 4000)" class="btn waves-effect waves-light blue">Envoyer</button>
 </div>
