--- a/public/views/accueil.html
+++ b/public/views/accueil.html
@@ -1,6 +1,6 @@
 <div class="carousel carousel-slider center">
     <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2">Suivante</a>
+        <a class="btn waves-effect white grey-text darken-text-2">Votez pour moi!</a>
     </div>
     <div class="carousel-item red white-text" href="#one!">
         <h2>First Panel</h2>
@@ -22,6 +22,7 @@
 </div>
 <script>
   $('.carousel.carousel-slider').carousel({full_width: true})
+
   $(".btn").click(function(){
     carrousel.next();
   })
