--- a/public/views/footer.html
+++ b/public/views/footer.html
@@ -1,10 +1,9 @@
 <footer>
-        <div class="navbar-fixed">
-            <nav class="z-depth-0 black">
-              <div class="center-btn">
-                <a class="waves-effect waves-light"><img class="camera" src="assets/img/camera.png"/></a>
-              </div>
-            </nav>
-
-        </div>
+    <div class="navbar-fixed">
+        <nav class="z-depth-0 black">
+            <div class="center-btn">
+                <a class="waves-effect waves-light" href="/#/addphoto"><img class="camera" src="assets/img/camera.png"/></a>
+            </div>
+        </nav>
+    </div>
 </footer>
