--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,24 +1,29 @@
 /* Navbar */
 
+h2{
+  font-size: 10px;
+  margin: 0
+}
+
 .logo {
     margin-top: 10px
 }
 
+/* footer */
 
-/* Button */
 
 .center-btn {
     text-align: center
 }
 
 
-/* footer */
-
 footer {
     position: fixed;
     bottom: 0;
     z-index: 100
 }
+
+
 
 .camera {
     width: 80%;
@@ -28,11 +33,11 @@ footer {
 
 .carousel {
         align-content: center;
-        border: 5px solid black;
         margin: 0 auto;
         max-width: 100%;
     }
 /*form.html*/
+
 /*photo.html*/
 
 * {
@@ -41,26 +46,9 @@ footer {
 }
 
 body, html {
-    background: #1f1f1f;
-    color: #fff;
     font-family: "Open Sans", helvetica, sans-serif;
 }
 
-footer {
-    display: block;
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-}
-
-footer p {
-    font-size: 12px;
-    color: #999;
-}
-
-footer p a {
-    color: #ccc;
-}
 
 video {
     display: block;
