--- a/public/views/accueil.html
+++ b/public/views/accueil.html
@@ -1,3 +1,10 @@
+<br>
+<div class="imput-field">
+    <div class="col s12">
+<a><img id="banner" src="assets/img/banner.png"/></a>
+</div>
+</div>
+
 <div class="row">
     <div class="col s12">
         <div class="card">
