--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar-fixed">
     <nav class="z-depth-0 black">
         <img class="logo" src="assets/img/logo.png"/>
-        <a href="#" class="brand-logo">Mostachionador</a>
+        <a href="#" class="brand-logo">ShareUrStash</a>
     </nav>
 
 </div>
