--- a/public/views/main.html
+++ b/public/views/main.html
@@ -3,3 +3,5 @@
 <ng-include src="'views/form.html'"></ng-include>
 
 <ng-include src="'views/photo.html'"></ng-include>
+
+<ng-include src="'views/newsletter.html'"></ng-include>
