--- a/public/views/footer.html
+++ b/public/views/footer.html
@@ -1,9 +1,22 @@
 <footer>
     <div class="navbar-fixed">
-        <nav class="z-depth-0 black">
-            <div class="center-btn">
-                <a class="waves-effect waves-light" href="/#/addphoto"><img class="camera" src="assets/img/camera.png"/></a>
-            </div>
-        </nav>
+        <div class="row">
+            <nav class="z-depth-0 black">
+                <div class="col s12 row">
+                    <div class="col s2">
+                        <a href="https://www.facebook.com/MovemberFrance" target="_blank" title="Facebook"><img id="iconFacebook" src="assets/img/facebook.png" alt="facebook"/></a>
+                    </div>
+                    <div class="col s2">
+                        <a href="https://twitter.com/movemberfra?lang=fr" target="_blank" title="Twitter"><img id="iconTwitter" src="assets/img/twitter.png" alt="twitter"/></a>
+                    </div>
+                    <div class="col s4 center-btn">
+                        <a class="waves-effect waves-light" href="/#/form"><img class="camera" src="assets/img/camera.png"/></a>
+                    </div>
+                    <div class="col s4">
+                        <a class="waves-teal btn-flat black white-text" href="/#/newsletter">Newsletter</a>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </div>
 </footer>
