--- a/public/views/footer.html
+++ b/public/views/footer.html
@@ -12,7 +12,7 @@
                     <div class="col s4 center-btn">
                         <a class="waves-effect waves-light" href="/#/form"><img class="camera" src="assets/img/camera.png"/></a>
                     </div>
-                    <div class="col s4">
+                    <div class="col s4 center-btn">
                         <a class="waves-teal btn-flat black white-text" href="/#/newsletter">Newsletter</a>
                     </div>
                 </div>
