--- a/public/views/newsletter.html
+++ b/public/views/newsletter.html
@@ -1,11 +1,15 @@
 <div class="row">
     <form class="col s12">
         <div class="row">
-          <p id="textmodal"> Souhaitez-vous vous abonnez à notre newsletter et ainsi recevoir régulièrement un résumé des plus belles moustaches devant l'éternel.</p>
+            <p id="textmodal">
+                Souhaitez-vous vous abonnez à notre newsletter et ainsi recevoir régulièrement un résumé des plus belles moustaches devant l'éternel.</p>
             <div class="input-field col s12">
                 <i class="material-icons prefix">mail outline</i>
                 <input id="icon_prefix" type="text" class="validate">
                 <label for="icon_prefix">Saisissez votre email</label>
+            </div>
+            <div class="col s12 center boutonenvoyer">
+                <button ng-click='vm.create(photo)' onclick="Materialize.toast('Votre demande a bien été prise en compte!', 4000)" class="btn waves-effect waves-light black">Je m'abonne !</button>
             </div>
         </div>
     </form>
