--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,15 +24,20 @@ footer {
     width: 80%;
 }
 
+
 /*accueil.html*/
 
 .carousel {
-        align-content: center;
-        border: 5px solid black;
-        margin: 0 auto;
-        max-width: 100%;
-    }
+    align-content: center;
+    border: 5px solid black;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+
 /*form.html*/
+
+
 /*photo.html*/
 
 * {
@@ -77,7 +82,7 @@ video {
     position: absolute;
     width: 600px;
     text-align: center;
-    top: -50%;
+    top: -60%;
     left: 50%;
     -webkit-transition: 1s 0.5s;
     -moz-transition: 1s 0.5s;
@@ -93,7 +98,7 @@ video {
 
 header {
     position: absolute;
-    width: 600px;
+    width: 80vw;
     top: -50%;
     left: 50%;
     background: #333;
@@ -136,10 +141,18 @@ header p {
     border: none;
     font-size: 18px;
     color: #fff;
-    width: 48%;
+    width: 38%;
     background: green;
     border-radius: 10px;
     padding: 10px 20px;
+    margin: 5% 20% 0% 20%;
+}
+
+#photo{
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  margin-top: 10%;
 }
 
 #uploaded form, #uploaded button {
@@ -169,6 +182,7 @@ header p {
     width: 48%;
     border-radius: 10px;
     padding: 10px 20px;
+    margin-top: 90%;
 }
 
 #uploaded a {
