--- a/public/views/newsletter.html
+++ b/public/views/newsletter.html
@@ -1,8 +1,8 @@
 <div class="row">
     <form class="col s12">
         <div class="row">
-            <p id="textmodal">
-                Souhaitez-vous vous abonnez à notre newsletter et ainsi recevoir régulièrement un résumé des plus belles moustaches devant l'éternel.</p>
+            <p id="textnews">
+                Ton père c'est Tom Selleck et ta mère c'est Hulk Hogan? <br/> Alors inscris toi à notre newsletter !</p>
             <div class="input-field col s12">
                 <i class="material-icons prefix">mail outline</i>
                 <input id="icon_prefix" type="text" class="validate">
@@ -13,4 +13,9 @@
             </div>
         </div>
     </form>
+    <div class="retourAdmin2">
+        <a href="/#/" style="color:#000000">
+            Retour à l'accueil
+        </a>
+    </div>
 </div>
