--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -72,6 +72,7 @@ footer {
 
 #banner {
     max-width: 100%;
+    border-bottom: 3px solid black
 
 }
 /*form.html*/
@@ -114,7 +115,7 @@ footer {
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    margin: 10% 10% 10% 10%;
+    margin: 0 10% 10% 10%;
     text-align: center;
 }
 
