--- a/public/views/accueil.html
+++ b/public/views/accueil.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
     <div class="col s12">
         <div class="card">
             <div class="card-image">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
