--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,7 +1,14 @@
-<div class="navbar-fixed">
-    <nav class="z-depth-0 black">
-        <img class="logo" src="assets/img/logo.png"/>
-        <a href="#" class="brand-logo">ShareUrStash</a>
-    </nav>
+<nav class="nav-fixed z-depth-0 black">
+    <img class="logo brand-logo left" src="assets/img/logo.png"/>
+    <a href="#" class="brand-logo">ShareUrStash</a>
+    <a id="burger" data-activates="mobile-demo" class="button-collapse brand-logo right"><i class="material-icons">menu</i></a>
+    <ul class="side-nav" id="mobile-demo">
+      <li><a href="sass.html">Accueil</a></li>
+      <li><a href="badges.html">JustShareIt</a></li>
+      <li><a href="collapsible.html">Newsletter</a></li>
+    </ul>
+</nav>
 
-</div>
+<script type="text/javascript">
+$(".button-collapse").sideNav();
+</script>
