--- a/public/views/accueil.html
+++ b/public/views/accueil.html
@@ -5,21 +5,22 @@
     </div>
 </div>
 
-<!-- <div class="row">
+<div class="row">
     <div class="col s12">
         <div class="card">
             <div class="card-image">
                 <img src="assets/img/photo.jpg">
-                <span class="card-title"><p ng-bind-html='photo.pseudoPhoto'></p></span>
+                <span class="card-title">
+                    <p ng-bind-html='photo.pseudoPhoto'></p>
+                </span>
             </div>
             <div class="card-content">
                 <div class="col s12" ng-repeat='photo in vm.photos'>
                     <img src="{{photo.stachePhoto}}" alt="photos" class="stachePhoto">
+                    <p>{{photo.pseudoPhoto}}</p>
                     <p>{{photo.lieuPhoto}}</p>
                     <p>{{photo.commentPhoto}}</p>
-                    <p>{{photo.stachePhoto}}</p>
-                    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=small&mobile_iframe=true&appId=1222472067795207&width=72&height=20" width="72" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-lang="fr" data-size="large">Tweeter</a>
+
                 </div>
             </div>
             <div class="card-action">
@@ -30,7 +31,20 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
 
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script>
+    !function(d, s, id) {
+        var js,
+            fjs = d.getElementsByTagName(s)[0],
+            p = /^http:/.test(d.location)
+                ? 'http'
+                : 'https';
+        if (!d.getElementById(id)) {
+            js = d.createElement(s);
+            js.id = id;
+            js.src = p + '://platform.twitter.com/widgets.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }
+    }(document, 'script', 'twitter-wjs');
+</script>
