ajout de l'ultime moustache

--- a/public/views/newsletter.html
+++ b/public/views/newsletter.html
@@ -9,7 +9,7 @@
                 <label for="icon_prefix">Saisissez votre email</label>
             </div>
             <div class="col s12 center boutonenvoyer">
-                <button ng-click='vm.create(photo)' onclick="Materialize.toast('Votre demande a bien été prise en compte!', 4000)" class="btn waves-effect waves-light black">Je m'abonne !</button>
+              <input ng-click='vm.create(photo)' onclick="Materialize.toast('Bienvenue dans un monde où le poil est roi !', 4000)" id="envoyer stachebouton" type="image" src="assets/img/stache2.png" name="ok">
             </div>
         </div>
     </form>
