--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -35,8 +35,14 @@ h2 {
 }
 
 #burger{
-    margin-right :0;
+    margin-right :35px;
 }
+
+.dropdown-content li a {
+
+  color: white;
+}
+
 
 /* footer */
 
